--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,21 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StudyBuddy - Your AI Study Assistant</title>
-    <meta name="description" content="Transform your learning with AI-powered study assistance. Get instant explanations, organize materials, and study smarter with StudyBuddy." />
+    <title>SarthiAI</title>
+    favico
+    <meta name="description" content="Transform your learning with AI-powered study assistance. Get instant explanations, organize materials, and study smarter with SarthiAi" />
     <meta name="keywords" content="AI study assistant, learning, education, study buddy, AI tutor" />
     <meta name="author" content="StudyBuddy" />
 
-    <meta property="og:title" content="StudyBuddy - Your AI Study Assistant" />
-    <meta property="og:description" content="Transform your learning with AI-powered study assistance. Get instant explanations, organize materials, and study smarter with StudyBuddy." />
+    <meta property="og:title" content="StudyBuddy" />
+    <meta property="og:description" content="Transform your learning with AI-powered study assistance. Get instant explanations, organize materials, and study smarter with SarthiAI." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@studybuddy_ai" />
-    <meta name="twitter:title" content="StudyBuddy - Your AI Study Assistant" />
-    <meta name="twitter:description" content="Transform your learning with AI-powered study assistance." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
